Fix contrast about text

--- a/styles.css
+++ b/styles.css
@@ -177,19 +177,18 @@ h1, h2, h3, h4 {
 }
 
 .about_text {
-    background-color:#008080;
+    background-color:#1d1715;
     display: inline-block;
     padding: 50px 15px;
     margin: 0px auto;
     max-width: 100%;
-    
-    
+    color: #F2F2F2;    
 }
 
 .about_shop img {
     max-width: 100%;
+    height: 550px;
     width:1220px; 
-    height: 400px;
     object-fit: cover;
               
 }
